cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(038 src/038.cpp)
add_executable(043 src/043.cpp)
add_executable(053 src/053.cpp)
add_executable(058 src/058.cpp)
add_executable(061 src/061.cpp)
add_executable(064 src/064/02.cpp)
add_executable(066 src/066.cpp)
add_executable(067 src/067.cpp)
add_executable(069 src/069.cpp)
add_executable(070 src/070.cpp)
add_executable(083 src/083.cpp)
add_executable(088 src/088.cpp)
add_executable(100 src/100.cpp)
add_executable(101 src/101.cpp)
add_executable(104 src/104.cpp)
add_executable(107 src/107.cpp)
add_executable(108 src/108.cpp)
add_executable(110 src/110.cpp)
add_executable(111 src/111.cpp)
add_executable(112 src/112.cpp)
add_executable(118 src/118.cpp)
add_executable(119 src/119.cpp)
add_executable(121 src/121.cpp)
add_executable(122 src/122.cpp)
add_executable(124 src/124.cpp)
add_executable(125 src/125.cpp)
add_executable(136 src/136.cpp)
add_executable(141 src/141.cpp)
add_executable(155 src/155.cpp)
add_executable(160 src/160.cpp)
add_executable(167 src/167.cpp)
add_executable(168 src/168.cpp)
add_executable(169 src/169.cpp)
add_executable(171 src/171.cpp)
add_executable(172 src/172.cpp)
add_executable(190 src/190.cpp)
add_executable(191 src/191.cpp)
add_executable(198 src/198.cpp)
add_executable(202 src/202.cpp)
add_executable(203 src/203.cpp)
add_executable(204 src/204.cpp)
add_executable(205 src/205.cpp)
add_executable(206 src/206.cpp)
add_executable(217 src/217.cpp)
add_executable(219 src/219.cpp)
add_executable(225 src/225.cpp)
add_executable(226 src/226.cpp)
add_executable(228 src/228.cpp)
add_executable(231 src/231.cpp)
add_executable(232 src/232.cpp)
add_executable(234 src/234.cpp)
add_executable(235 src/235.cpp)
add_executable(237 src/237.cpp)
add_executable(242 src/242.cpp)
add_executable(257 src/257.cpp)
add_executable(258 src/258.cpp)
add_executable(263 src/263.cpp)
add_executable(268 src/268.cpp)
add_executable(278 src/278.cpp)
add_executable(283 src/283.cpp)
add_executable(290 src/290.cpp)
add_executable(292 src/292.cpp)
add_executable(303 src/303.cpp)
add_executable(326 src/326.cpp)
add_executable(342 src/342.cpp)
add_executable(344 src/344.cpp)
add_executable(345 src/345.cpp)
add_executable(349 src/349.cpp)
add_executable(350 src/350.cpp)
add_executable(367 src/367.cpp)
add_executable(371 src/371.cpp)
add_executable(374 src/374.cpp)
add_executable(383 src/383.cpp)
add_executable(387 src/387.cpp)
add_executable(389 src/389.cpp)
add_executable(392 src/392.cpp)
add_executable(401 src/401.cpp)
add_executable(404 src/404.cpp)
add_executable(405 src/405.cpp)
add_executable(409 src/409.cpp)
add_executable(412 src/412.cpp)
add_executable(474 src/474.cpp)
