cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

include_directories(common)

add_executable(0038 src/0038.cpp)
add_executable(0043 src/0043.cpp)
add_executable(0053 src/0053.cpp)
add_executable(0058 src/0058.cpp)
add_executable(0061 src/0061.cpp)
add_executable(0064 src/0064/02.cpp)
add_executable(0066 src/0066.cpp)
add_executable(0067 src/0067.cpp)
add_executable(0069 src/0069.cpp)
add_executable(0070 src/0070.cpp)
add_executable(0083 src/0083.cpp)
add_executable(0088 src/0088.cpp)
add_executable(0100 src/0100.cpp)
add_executable(0101 src/0101.cpp)
add_executable(0104 src/0104.cpp)
add_executable(0107 src/0107.cpp)
add_executable(0108 src/0108.cpp)
add_executable(0110 src/0110.cpp)
add_executable(0111 src/0111.cpp)
add_executable(0112 src/0112.cpp)
add_executable(0118 src/0118.cpp)
add_executable(0119 src/0119.cpp)
add_executable(0121 src/0121.cpp)
add_executable(0122 src/0122.cpp)
add_executable(0124 src/0124.cpp)
add_executable(0125 src/0125.cpp)
add_executable(0136 src/0136.cpp)
add_executable(0141 src/0141.cpp)
add_executable(0155 src/0155.cpp)
add_executable(0160 src/0160.cpp)
add_executable(0167 src/0167.cpp)
add_executable(0168 src/0168.cpp)
add_executable(0169 src/0169.cpp)
add_executable(0171 src/0171.cpp)
add_executable(0172 src/0172.cpp)
add_executable(0190 src/0190.cpp)
add_executable(0191 src/0191.cpp)
add_executable(0198 src/0198.cpp)
add_executable(0202 src/0202.cpp)
add_executable(0203 src/0203.cpp)
add_executable(0204 src/0204.cpp)
add_executable(0205 src/0205.cpp)
add_executable(0206 src/0206.cpp)
add_executable(0217 src/0217.cpp)
add_executable(0219 src/0219.cpp)
add_executable(0225 src/0225.cpp)
add_executable(0226 src/0226.cpp)
add_executable(0228 src/0228.cpp)
add_executable(0231 src/0231.cpp)
add_executable(0232 src/0232.cpp)
add_executable(0234 src/0234.cpp)
add_executable(0235 src/0235.cpp)
add_executable(0237 src/0237.cpp)
add_executable(0242 src/0242.cpp)
add_executable(0257 src/0257.cpp)
add_executable(0258 src/0258.cpp)
add_executable(0263 src/0263.cpp)
add_executable(0268 src/0268.cpp)
add_executable(0278 src/0278.cpp)
add_executable(0283 src/0283.cpp)
add_executable(0290 src/0290.cpp)
add_executable(0292 src/0292.cpp)
add_executable(0303 src/0303.cpp)
add_executable(0326 src/0326.cpp)
add_executable(0342 src/0342.cpp)
add_executable(0344 src/0344.cpp)
add_executable(0345 src/0345.cpp)
add_executable(0349 src/0349.cpp)
add_executable(0350 src/0350.cpp)
add_executable(0367 src/0367.cpp)
add_executable(0371 src/0371.cpp)
add_executable(0374 src/0374.cpp)
add_executable(0383 src/0383.cpp)
add_executable(0387 src/0387.cpp)
add_executable(0389 src/0389.cpp)
add_executable(0392 src/0392.cpp)
add_executable(0401 src/0401.cpp)
add_executable(0404 src/0404.cpp)
add_executable(0405 src/0405.cpp)
add_executable(0409 src/0409.cpp)
add_executable(0412 src/0412.cpp)
add_executable(0414 src/0414.cpp)
add_executable(0415 src/0415.cpp)
add_executable(0434 src/0434.cpp)
add_executable(0441 src/0441.cpp)
add_executable(0448 src/0448.cpp)
add_executable(0453 src/0453.cpp)
add_executable(0455 src/0455.cpp)
add_executable(0459 src/0459.cpp)
add_executable(0461 src/0461.cpp)
add_executable(0463 src/0463.cpp)
add_executable(0474 src/0474.cpp)
add_executable(0476 src/0476.cpp)
add_executable(0482 src/0482.cpp)
add_executable(0485 src/0485.cpp)
add_executable(0492 src/0492.cpp)
add_executable(0496 src/0496.cpp)
add_executable(0500 src/0500.cpp)
add_executable(0501 src/0501.cpp)
add_executable(0504 src/0504.cpp)
add_executable(0506 src/0506.cpp)
add_executable(0507 src/0507.cpp)
add_executable(0509 src/0509.cpp)
add_executable(0520 src/0520.cpp)
add_executable(0521 src/0521.cpp)
add_executable(0530 src/0530.cpp)
add_executable(0541 src/0541.cpp)
add_executable(0543 src/0543.cpp)
add_executable(0551 src/0551.cpp)
add_executable(0557 src/0557.cpp)
add_executable(0559 src/0559.cpp)
add_executable(0561 src/0561.cpp)
add_executable(0563 src/0563.cpp)
add_executable(0566 src/0566.cpp)
add_executable(0572 src/0572.cpp)
add_executable(0575 src/0575.cpp)
add_executable(0589 src/0589.cpp)
add_executable(0590 src/0590.cpp)
add_executable(0594 src/0594.cpp)
add_executable(0598 src/0598.cpp)
add_executable(0599 src/0599.cpp)
add_executable(0605 src/0605.cpp)
add_executable(0606 src/0606.cpp)
add_executable(0617 src/0617.cpp)
add_executable(0628 src/0628.cpp)
add_executable(0637 src/0637.cpp)
add_executable(0643 src/0643.cpp)
add_executable(0645 src/0645.cpp)
add_executable(0653 src/0653.cpp)
add_executable(0657 src/0657.cpp)
add_executable(0661 src/0661.cpp)
add_executable(0665 src/0665.cpp)
add_executable(0669 src/0669.cpp)
add_executable(0671 src/0671.cpp)
add_executable(0674 src/0674.cpp)
add_executable(0680 src/0680.cpp)
add_executable(0682 src/0682.cpp)
add_executable(0690 src/0690.cpp)
add_executable(0693 src/0693.cpp)
add_executable(0696 src/0696.cpp)
add_executable(0697 src/0697.cpp)
add_executable(0700 src/0700.cpp)
add_executable(0703 src/0703.cpp)
add_executable(0704 src/0704.cpp)
add_executable(0705 src/0705.cpp)
add_executable(0706 src/0706.cpp)
add_executable(0709 src/0709.cpp)
add_executable(0717 src/0717.cpp)
add_executable(0720 src/0720.cpp)
add_executable(0724 src/0724.cpp)
add_executable(0728 src/0728.cpp)
add_executable(0733 src/0733.cpp)
add_executable(0746 src/0746.cpp)
add_executable(0747 src/0747.cpp)
add_executable(0748 src/0748.cpp)
add_executable(0762 src/0762.cpp)
add_executable(0766 src/0766.cpp)
add_executable(0771 src/0771.cpp)
add_executable(0783 src/0783.cpp)
add_executable(0788 src/0788.cpp)
add_executable(0796 src/0796.cpp)
add_executable(0804 src/0804.cpp)
add_executable(0806 src/0806.cpp)
add_executable(0811 src/0811.cpp)
add_executable(0812 src/0812.cpp)
add_executable(0819 src/0819.cpp)
add_executable(0821 src/0821.cpp)
add_executable(0824 src/0824.cpp)
add_executable(0830 src/0830.cpp)
add_executable(0832 src/0832.cpp)
add_executable(0836 src/0836.cpp)
add_executable(0844 src/0844.cpp)
add_executable(0852 src/0852.cpp)
add_executable(0859 src/0859.cpp)
add_executable(0860 src/0860.cpp)
add_executable(0867 src/0867.cpp)
add_executable(0868 src/0868.cpp)
add_executable(0872 src/0872.cpp)
add_executable(0874 src/0874.cpp)
add_executable(0876 src/0876.cpp)
add_executable(0883 src/0883.cpp)
add_executable(0884 src/0884.cpp)
add_executable(0888 src/0888.cpp)
add_executable(0892 src/0892.cpp)
add_executable(0893 src/0893.cpp)
add_executable(0896 src/0896.cpp)
add_executable(0897 src/0897.cpp)
add_executable(0905 src/0905.cpp)
add_executable(0908 src/0908.cpp)
add_executable(0914 src/0914.cpp)
add_executable(0917 src/0917.cpp)
add_executable(0922 src/0922.cpp)
add_executable(0925 src/0925.cpp)
add_executable(0929 src/0929.cpp)
add_executable(0933 src/0933.cpp)
add_executable(0937 src/0937.cpp)
add_executable(0938 src/0938.cpp)
add_executable(0941 src/0941.cpp)
add_executable(0942 src/0942.cpp)
add_executable(0944 src/0944.cpp)
add_executable(0953 src/0953.cpp)
add_executable(0961 src/0961.cpp)
add_executable(0965 src/0965.cpp)
add_executable(0970 src/0970.cpp)
add_executable(0976 src/0976.cpp)
add_executable(05629 src/05629.cpp)
add_executable(05630 src/05630.cpp)
add_executable(05631 src/05631.cpp)
